@@ -112,26 +112,6 @@ your site.
 </p>
 
 
-<h2>Mandrake</h2>
-
-<p>
-  You can also compile a RPM for Mandrake yourself.  A spec file is
-  in <code>make/out/lilypond.mandrake.spec</code>, see the instructions
-  for building the Fedora RPM.</a>
-</p>
-
-<h2>SuSE</h2>
-
-A spec file is in <code>make/out/lilypond.suse.spec</code>, see the
-instructions building the Fedora RPM.</a>
-
-<p>
-  You must have the following packages: guile tcsh tetex te_latex
-  te_kpath te_mpost libpng python gpp libgpp gettext autoconf netpbm
-  libnetpb gs_serv gs_lib gs_fonts guile
-</p>
-
-
 <h2>Windows</h2>
 
 
