@@ -1,5 +1,7 @@
 2005-11-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/devel/packaging.html: remove SUSE & Mandrake instructions.
+
 	* site/about/faq.html: remove info which is covered in the
 	download page.
 	remove TeX q&a.
